--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:e2e": "vue-cli-service test:e2e",
-    "mockapi": "json-server -w data/db.json"
+    "mockapi": "json-server -w data/db.json",
+    "test": "vitest"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.3",
     "axios": "^1.6.7",
+    "vite": "^5.0.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -20,6 +23,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "cypress": "^9.7.0",
-    "json-server": "^1.0.0-alpha.23"
+    "json-server": "^1.0.0-alpha.23",
+    "vitest": "^1.2.2"
   }
 }
