--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "build": "vue-cli-service build",
     "test:e2e": "vue-cli-service test:e2e",
     "mockapi": "json-server -w data/db.json",
-    "test": "vitest"
+    "test": "vitest --environment jsdom tests/unit"
   },
   "dependencies": {
+    "@types/jsdom": "^21.1.6",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/test-utils": "^2.4.4",
     "axios": "^1.6.7",
+    "jsdom": "^24.0.0",
     "vite": "^5.0.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
